--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,36 @@
 body {
   background: lightblue;
 }
+
+#main-container {
+  /* max-width: 600px; */
+}
+
+#search-field {
+  width: 190px;
+  margin: 5px;
+}
+
+.col-sm-8 {
+  margin-bottom: 20px;
+}
+
+#load-more {
+  margin-top: 20px;
+}
+
+#title {
+  margin-bottom: 20px;
+}
+
+#search-title {
+  margin: 5px;
+}
+
+#search-btn {
+  margin: 5px;
+}
+
+#gif-section {
+  margin-top: 15px;
+}
